cmake_minimum_required(VERSION 3.20)
project(Algorithms)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algorithms main.cpp)

add_executable(01 01.cpp)
add_executable(09 09.cpp)
add_executable(09-beta 09-beta.cpp)
add_executable(test test.cpp)
add_executable(Coins 06.cpp)
add_executable(10 10.cpp)
add_executable(08 08.cpp)
add_executable(07 07.cpp)
add_executable(04 04.cpp)